--- a/src/style/mobile.css
+++ b/src/style/mobile.css
@@ -7,13 +7,13 @@
     .main-photo_img {
         width: 80px;
         height: auto;
-        
+
         /* display: flex;
         flex-direction: column; */
 
     }
 
-    
+
 
     .slider-photo {
         width: 250px;
@@ -89,16 +89,29 @@
     }
 }
 
+@media(max-width: 394px) {
+    .main-photo_img {
+        width: 100px;
+
+    }
+
+    .container_main {
+        background-size: cover;
+    }
+}
+
 @media (max-width :376px) {
     .main-photo_img {
         width: 90px;
 
     }
-    .container_main{
-        background-size:    cover;
+
+    .container_main {
+        background-size: cover;
     }
-    
+
 }
+
 @media (max-width :321px) {
     .main-photo_img {
         width: 80px;
